--- a/style.css
+++ b/style.css
@@ -28,22 +28,23 @@ html,body{
 }
 
 /*-----------tooltip-----------*/
-.canvas .custom-tooltip{
-    position:absolute;
-    border:1px solid red;
-    width:150px;
-    min-height:10px;
-    padding:0px 10px;
-}
 /*.canvas .custom-tooltip{*/
-	/*position:absolute;*/
-	/*/!*border:1px solid grey;*!/*/
-	/*width:150px;*/
-	/*min-height:10px;*/
-	/*padding:0px 10px;*/
-	/*opacity:0;*/
-	/*background-color:rgba(200,200,200,.4)*/
+    /*position:absolute;*/
+    /*border:1px solid red;*/
+    /*width:150px;*/
+    /*min-height:10px;*/
+    /*padding:0px 10px;*/
 /*}*/
+.canvas .custom-tooltip{
+	position:absolute;
+	/*border:1px solid grey;*/
+	width:150px;
+	min-height:10px;
+	padding:0px 10px;
+	opacity:0;
+	background-color:rgba(100,100,100,.4)
+
+}
 /*------------font-------------*/
 body{
 	font-size: 16px;
